# jumakl-extractor

./: .env  .gitignore  Cargo.toml
config/: .gitignore  sources.price.toml.example  sources.stock.toml.example
src/: cli.rs  config.rs  helpers.rs  logging.rs  main.rs  pipeline.rs  webrequest.rs
