[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package]
name = "jumakl-extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
clap = { version = "4.6.2", features = ["derive"] }
quick-xml = "0.40.1"
reqwest = { version = "0.13.4", features = ["blocking"] }
serde = { version = "1.0.229", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.3"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
